[tool.poetry]
name = "click-logging"
version = "0.1.0"
description = ""
authors = ["nsuljagic <nikola170.2012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
